--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -39,6 +40,7 @@ android {
 
 dependencies {
 
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
@@ -46,7 +48,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
-
+    implementation 'com.google.firebase:firebase-database:20.0.4'
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -75,4 +77,7 @@ dependencies {
     implementation 'io.nlopez.smartlocation:library:3.3.3'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+
+    implementation "com.google.firebase:firebase-database:20.2.2"
+    implementation "com.google.firebase:firebase-auth:22.1.2"
 }
