--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.immortalweeds.pedometer" >
+    package="com.immortalweeds.pedometer">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -19,10 +19,13 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pedometer"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
         <activity
             android:name=".UserSetup"
+
+            android:exported="false" />
+        <activity
+            android:name="com.immortalweeds.pedometer.activitys.FormularioActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +33,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -38,13 +42,14 @@
             android:value="${MAPS_API_KEY}" />
 
         <activity
-            android:name="com.immortalweeds.pedometer.GpsMapTest"
+            android:name="com.immortalweeds.pedometer.activitys.GpsMapTest"
             android:exported="false" />
         <activity
-            android:name="com.immortalweeds.pedometer.CountStep"
-            android:exported="true"/>
+            android:name="com.immortalweeds.pedometer.activitys.CountStep"
+            android:exported="true"
+            tools:ignore="MissingClass" />
         <activity
-            android:name=".GpsMap"
+            android:name="com.immortalweeds.pedometer.activitys.GpsMap"
             android:exported="true" />
     </application>
 
